styles.css
/*clear sheet*/
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*root variables*/
:root {
    --super-dg: rgb(54, 72, 50);
    --light-green: #AABC5C;
    --dark-green: #565F29;
    --white: #F2F3EE;
    --orange: #FAA32F;
    --bright-pink: #DA1C5C;
    --light-pink: #FABEB7;
    --main-title: "Arima", system-ui;
    --sub-title: "Google Sans Flex", sans-serif;
    --main-text: sans-serif;

}

    /* main fonts imported */
    .arima-uniquifier {
        font-family: "Arima", system-ui;
        font-weight: bold;
        font-style: normal;
      }

      .google-sans-flex-uniquifier {
        font-family: "Google Sans Flex", sans-serif;
        font-weight: 400;
        font-style: normal;
        font-variation-settings:
          "slnt" 0,
          "wdth" 100,
          "GRAD" 0,
          "ROND" 0;
      }


      body{
        font-family: var(--main-text);
      background: var(--white);
      }

      html, body {
        max-width: 100%;
        overflow-x: hidden;
      }

/*-----  dark-mode changes ----*/
      body.dark-mode{
        background-color: var(--dark-green);
        color: var(--white);
      }

body.dark-mode header {
  background: var(--super-dg);
}

body.dark-mode .plants{
  color: black;
}

body.dark-mode .tips{
  color: black;
}

body.dark-mode #about{
  background: var(--super-dg);
}

body.dark-mode #contact{
  background: var(--super-dg);
}

body.dark-mode footer{
  background: var(--super-dg);
}

body.dark-mode .skip-to-next{
  color: var(--dark-green);
}

body.dark-mode #cart-shop{
  border-bottom: 2px solid var(--super-dg);
}
/*----------------------------*/


      #color-mode{
        margin-right: 3rem;
        width: 14%;
        height: auto;
        cursor: pointer;
        background: var(--white);
        border-radius: 4.5rem;
        border: 1px solid var(--bright-pink);
      }

      #screen-size{
        width: 1280px;
      }
    
      h1, h2{
        font-family: var(--main-title);
      }
  
      h3{
        font-family: var(--sub-title);
      }

      a {
        font-family: var(--sub-title);
      }
      
    #skip {
    color: black;
    background: var(--white);
    display: block;
    width: 100%;
    padding: .75rem;
    position: absolute;
    top: 0;
    left: 0rem;
    padding-left: 2.5rem;
    font-family: var(--sub-title);
      font-size: 13pt;
    }

    #skip:hover{
      color: var(--dark-green);
    }

    main img{
      border-radius: 2rem;
    }

    header{
      background: var(--dark-green);
      color: var(--white);
      display: flex;
      width: 100%;
      justify-content: space-between;
      align-items: center;
      padding: 1rem;
      position: fixed;
      padding-top: 3rem;
    }

    .header-left{
      display: flex;
      align-items: center;
    }

    .header-left img{
      width: 80px;
      height: auto;
    }

    h1{
      font-size: 25pt;
      margin-top: .5rem;
      font-weight: bold;
    }

    .header-right{
      display: flex;
      align-items: center;
    }

    header nav ul {
      display: flex;
      list-style: none;
      gap: 1rem;
      margin-right: .5rem;
    }

    header nav ul li a img {
      width: 25px;
      height: auto;
      vertical-align: middle;
    }

    header ul a {
      text-decoration: none;
      color: var(--white);
    }

    header ul a:hover{
      color: var(--super-dg);
    }

    ul li {
      margin-top: .5rem;
    }

    header nav ul li a img {
      filter: invert(1);
      margin-top: -.3rem;
    }

    #storefront {
      width: 630px;
      height: 390px;
      margin: 12rem 2rem auto 9rem;
      display: block;
    }

    #landing-page{
      display: grid;
      grid-template-columns: 1fr 1fr;
      background: radial-gradient(circle, transparent 69%, var(--dark-green) 117%);
      
    }

    #landing-page h1{
      margin: 18rem 10rem 0 0;
      line-height: 3rem;
      color: var(--super-dg);
      font-size: 25pt;
    }

    #landing-page a img{
       width: 95px;
       height: auto;
       float: left;
       margin-left: -1rem;
    }

    #shop-header{
      font-family: var(--main-title);
      font-size: 22pt;
      text-align: center;
      font-weight: bold;
      margin: 0 0 .5rem 0;
      background: var(--super-dg);
      display: block;
      padding: 1rem 0;
      color: var(--white);
    }

    #cart-dropdown{
      border: 2px solid var(--dark-green);
      border-radius: 1rem;
      margin: .5rem 6rem 27rem 6rem;
      background: var(--dark-green);
    }

    #cart-dropdown h2{
      font-family: var(--main-title);
      font-size: 22pt;
      font-weight: bold;
      margin-top: 2.35rem;
      text-align: left;
      color: var(--white)
    }

    #cart-header{
      display: grid;
      grid-template-columns: 1fr 1.5fr;
    }

    #cart-dropdown img{
      width: 22%;
      height: auto;
      margin: .25rem 0 .25rem 4rem;
    }
/* ... */

